--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,10 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<!-- <link rel="icon" href="%sveltekit.assets%/favicon.png" /> -->
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
+		<title>nate portofolio</title>
 	</head>
 	<body class="bg-[#121212]" data-sveltekit-preload-data="hover">
 		<div style="display: contents">%sveltekit.body%</div>
